--- a/README.html
+++ b/README.html
@@ -3,14 +3,34 @@
 		<link rel="stylesheet" href="windi.css" />
 	</head>
 
-	<body class="flex justify-center">
-		<main
-			style="width: 800px; height: 800px"
-			class="bg-gray-900 flex flex-row justify-center"
-		>
-			<div class="h-200 flex flex-col justify-center">
-				<h1 class="text-sky-100 text-8xl font-bold">Hi</h1>
+	<body class="flex justify-center m-10 bg-black">
+		<main class="flex flex-col font-sans text-sky-100">
+			<div
+				style="width: 800px; height: 690px"
+				class="bg-gray-900 flex flex-row justify-center rounded-2xl border-2 border-light-blue-800"
+			>
+				<div style="height: 690px" class="h-200 flex flex-col justify-center">
+					<h1 class="text-8xl font-bold">Hi</h1>
+				</div>
+			</div>
+			<div class="flex flex-row justify-between">
+				<div
+					style="width: 395px; height: 100px; margin-top: 10px"
+					class="flex justify-center bg-gray-900 rounded-2xl border-2 border-light-blue-800"
+				>
+					<div class="flex flex-col justify-center"></div>
+				</div>
+				<div
+					style="width: 395px; height: 100px; margin-top: 10px"
+					class="flex justify-center bg-gray-900 rounded-2xl border-2 border-light-blue-800"
+				>
+					<div class="flex flex-col justify-center"></div>
+				</div>
 			</div>
 		</main>
 	</body>
 </html>
+
+<!--
+windicss ./**/*.html -to windi.css --dev
+-->
