--- a/README.html
+++ b/README.html
@@ -6,22 +6,27 @@
 	<body class="flex justify-center m-10 bg-black">
 		<main class="flex flex-col font-sans text-sky-100">
 			<div
-				style="width: 800px; height: 690px"
+				style="width: 796px; height: 686px"
 				class="bg-gray-900 flex flex-row justify-center rounded-2xl border-2 border-light-blue-800"
 			>
-				<div style="height: 690px" class="h-200 flex flex-col justify-center">
+				<div style="height: 686px" class="flex flex-col justify-center">
 					<h1 class="text-8xl font-bold">Hi</h1>
 				</div>
 			</div>
 			<div class="flex flex-row justify-between">
 				<div
-					style="width: 395px; height: 100px; margin-top: 10px"
+					style="
+						width: 391px;
+						height: 96px;
+						margin-top: 10px;
+						margin-right: 5px;
+					"
 					class="flex justify-center bg-gray-900 rounded-2xl border-2 border-light-blue-800"
 				>
 					<div class="flex flex-col justify-center"></div>
 				</div>
 				<div
-					style="width: 395px; height: 100px; margin-top: 10px"
+					style="width: 391px; height: 96px; margin-top: 10px; margin-left: 5px"
 					class="flex justify-center bg-gray-900 rounded-2xl border-2 border-light-blue-800"
 				>
 					<div class="flex flex-col justify-center"></div>
