--- a/README.html
+++ b/README.html
@@ -4,33 +4,20 @@
 	</head>
 
 	<body class="flex justify-center m-10 bg-black">
-		<main class="flex flex-col font-sans text-sky-100">
+		<main class="flex flex-col items-center text-sky-100">
 			<div
 				style="width: 796px; height: 686px"
-				class="bg-gray-900 flex flex-row justify-center rounded-2xl border-2 border-light-blue-800"
+				class="bg-gray-900 font-sans flex flex justify-center rounded-2xl border-2 border-light-blue-800"
 			>
 				<div style="height: 686px" class="flex flex-col justify-center">
 					<h1 class="text-8xl font-bold">Hi</h1>
 				</div>
 			</div>
-			<div class="flex flex-row justify-between">
-				<div
-					style="
-						width: 391px;
-						height: 96px;
-						margin-top: 10px;
-						margin-right: 5px;
-					"
-					class="flex justify-center bg-gray-900 rounded-2xl border-2 border-light-blue-800"
-				>
-					<div class="flex flex-col justify-center"></div>
-				</div>
-				<div
-					style="width: 391px; height: 96px; margin-top: 10px; margin-left: 5px"
-					class="flex justify-center bg-gray-900 rounded-2xl border-2 border-light-blue-800"
-				>
-					<div class="flex flex-col justify-center"></div>
-				</div>
+			<div
+				style="width: 391px; height: 96px; margin-top: 10px; margin-left: 5px"
+				class="flex justify-center font-sans bg-gray-900 rounded-2xl border-2 border-light-blue-800"
+			>
+				<div class="flex flex-col justify-center"></div>
 			</div>
 		</main>
 	</body>
