--- a/README.html
+++ b/README.html
@@ -4,20 +4,38 @@
 	</head>
 
 	<body class="flex justify-center m-10 bg-black">
-		<main class="flex flex-col items-center text-sky-100">
+		<main class="flex flex-col items-center">
 			<div
 				style="width: 796px; height: 686px"
-				class="bg-gray-900 font-sans flex flex justify-center rounded-2xl border-2 border-light-blue-800"
+				class="bg-gray-900 text-sky-100 font-sans flex flex justify-center rounded-2xl border-2 border-light-blue-800"
 			>
-				<div style="height: 686px" class="flex flex-col justify-center">
-					<h1 class="text-8xl font-bold">Hi</h1>
+				<div
+					style="height: 686px"
+					class="flex flex-col justify-center items-center p-20"
+				>
+					<h1 class="text-4xl font-bold text-blue-400">Hi.</h1>
+					<p class="text-xl mt-6">
+						My name is
+						<span class="font-bold text-purple-500">Attila Menyhárt</span>.
+					</p>
+					<p class="text-xl mt-2 text-center text-sky-200">
+						I like many things programming, been doing it for 4 years now. I'm
+						open to help and also to work.
+					</p>
+					<p class="text-xl mt-4 text-center text-sky-100">
+						To learn more about me,
+						<span class="font-bold text-purple-300">click</span> on this box.
+					</p>
 				</div>
 			</div>
 			<div
 				style="width: 391px; height: 96px; margin-top: 10px; margin-left: 5px"
-				class="flex justify-center font-sans bg-gray-900 rounded-2xl border-2 border-light-blue-800"
+				class="flex justify-center font-sans bg-gray-900 text-sky-100 rounded-2xl border-2 border-light-blue-800"
 			>
-				<div class="flex flex-col justify-center"></div>
+				<div class="flex flex justify-center items-center text-xl font-bold">
+					<img src="flag.svg" width="50" height="50" class="mr-5" />
+					Olvass rólam Magyarul 🡕
+				</div>
 			</div>
 		</main>
 	</body>
