--- a/README.html
+++ b/README.html
@@ -33,8 +33,18 @@
 				class="flex justify-center font-sans bg-gray-900 text-sky-100 rounded-2xl border-2 border-light-blue-800"
 			>
 				<div class="flex flex justify-center items-center text-xl font-bold">
-					<img src="flag.svg" width="50" height="50" class="mr-5" />
-					Olvass rólam Magyarul 🡕
+					<div style="height: 30px" class="mr-2">
+						<div
+							style="width: 45px; height: 11px; border-radius: 5px 5px 0 0"
+							class="bg-red-600"
+						></div>
+						<div style="width: 45px; height: 10px" class="bg-white"></div>
+						<div
+							style="width: 45px; height: 11px; border-radius: 0 0 5px 5px"
+							class="bg-green-700"
+						></div>
+					</div>
+					<div style="height: 30px">Olvass rólam Magyarul 🡕</div>
 				</div>
 			</div>
 		</main>
